# strict-json-repair

./: README.md  demo.py  pyproject.toml  requirements-demo.txt
examples/: faq.schema.json  noisy_faq.txt
src/strict_json_repair/: __init__.py  core.py  pyd_models.py
src/strict_json_repair/prompts/: __init__.py  reask_prompt.md  repair_prompt.md  templates.py
src/strict_json_repair/providers/: __init__.py  gigachat_provider.py  openai_provider.py
tests/: demo_cases.jsonl
